# twitcher.exmpl

./: CMakeLists.txt  README.md
api/: ITwitcher.h  exceptions.h
kernel/api/: IIndexer.h  IStorage.h  IUser.h
kernel/private/: CMakeLists.txt  Indexer.cpp  Indexer.h  Storage.cpp  Storage.h  Twitcher.cpp  Twitcher.h  User.cpp  User.h
kernel/private/tests/: CMakeLists.txt  IndexerTest.cpp  StorageTest.cpp  TwitcherTest.cpp  UserTest.cpp
